<resources>
    <string name="app_name">PopularMoviesOne</string>
    <string name="detail_error_message">Movie details not available</string>
    <string name="error_message">Failed to get results, please try again</string>
    <string name="title">Title</string>
    <string name="_25_04_1993">25–04–1993</string>
    <string name="_6_10">6 / 10</string>
    <string name="description">description</string>
    <string name="sort">Sort</string>
    <string name="top_rated">Top Rated</string>
    <string name="popularity">Popularity</string>
    <string name="movieposter">MoviePoster</string>
    <string name="movie_picture">Movie Picture</string>
    <string name="view_trailer">View Trailer</string>
    <string name="trailer">Trailer</string>
    <string name="favorite">Favorite</string>


</resources>
