<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_back_drop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/movie_picture" />


        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:paddingStart="@dimen/padding_text"
                    android:paddingEnd="@dimen/padding_text"
                    android:text="@string/title"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/tv_release_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_25_04_1993"
                    android:paddingStart="@dimen/padding_text"
                    android:paddingEnd="@dimen/padding_text"
                    android:textColor="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/tv_voteAverage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_text"
                    android:gravity="center"
                    android:drawableTop="@android:drawable/btn_star"
                    android:text="@string/_6_10"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/tv_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_text"
                    android:text="@string/description"
                    android:textColor="@android:color/darker_gray" />

            </LinearLayout>


        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>

</FrameLayout>
